# Smart-Contract-Stuff

./: README.md  multisigWallet.sol
EthereumWatchdog/: .gitignore  Cargo.toml  README.md
EthereumWatchdog/src/: main.rs
lottery-project/: hardhat.config.js  package-lock.json  package.json
lottery-project/contracts/: Lottery.sol
lottery-project/scripts/: deploy.js
