[package]
name = "mal_alert"
version = "0.1.0"
edition = "2021"


[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
mongodb = "2.0.0-beta.1"
ethers = "2.0.0" 
tokio = { version = "1.26.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11.4", features = ["json"] }